clang/test/BSC/Negative/Driver/options/disable-nullability-check/disable-nullability-check.cbs
// RUN: %clang -disable-nullability-check %s -o %t.output
// RUN: %t.output

safe int main(void) {
    int *borrow _Nonnull p1 = nullptr;
    return 0;
}